<resources>
    <string name="app_name">PedidosELCA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Agregar Pedido</string>
    <string name="plus">"+"</string>
    <string name="adduser">"Agregar Pedido"</string>
    <string name="user">"Datos del pedido"</string>
    <string name="descrip">"Introduzca descripcion del pedido"</string>
    <string name="client">"Introduzca el cliente"</string>
    <string name="calle">"Domicilio"</string>
    <string name="numero">"Numero domicilio"</string>
    <string name="ciudad">"Ciudad"</string>
    <string name="Provincia">"Provincia"</string>
    <string name="save">"Grabar"</string>
    <string name="cancel">"Cancelar"</string>
    <string name="adduseractivitylabel">"Add User Activity"</string>
    <string name="scan">Scan</string>
    <string name="titled">Agregar Dispositivos</string>
    <string name="pedidopen">Pedidos Pendientes</string>
    <string name="terminar">Terminar</string>
    <string name="disp">Dispositivos Instalados</string>
    <string name="Dispositivos">Agregar Dispositivo</string>
    <string name="codigo">Introduzca Codigo</string>
    <string name="nomb">Nombre del Dispositivo</string>
    <string name="descrip_disp">Descripcion del dispositivo</string>
    <string name="Moddip">Modificar Dispositivos</string>
</resources>
