<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical"
    android:paddingTop="1dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cc0000"
        android:padding="5dp"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp" >



        <EditText
            android:id="@+id/cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/client"
            >
            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/descrip"
            android:layout_below="@+id/cliente"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>


        <EditText
            android:id="@+id/calle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/calle"
            android:layout_below="@+id/descripcion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>


        <EditText
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/numero"
            android:layout_below="@+id/calle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>



        <EditText
            android:id="@+id/ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/ciudad"
            android:layout_below="@+id/numero"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>


        <EditText
            android:id="@+id/provincia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/Provincia"
            android:layout_below="@+id/ciudad"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>


        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="addNewUser"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="cancelAddUser"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>