<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agregar_dispositivos" >

    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#cc0000"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/titled"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button1"
            android:layout_width="41dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#ffd700"
            android:onClick="adddisp"
            android:text="@string/plus"
            android:textColor="#ca0000"
            android:textSize="30sp" />

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_alignParentLeft="true"

        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textpedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_green_dark"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <ListView
            android:layout_below="@+id/textpedido"
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentLeft="true"
            android:descendantFocusability="blocksDescendants"
            >
        </ListView>


    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminar"
        android:id="@+id/button"
        android:layout_below="@id/relativeLayout1"
        android:layout_centerHorizontal="true" />

</RelativeLayout>