<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical"
    android:paddingTop="1dp" >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cc0000"
        android:padding="5dp"
        android:text="@string/Dispositivos"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/codigo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <requestFocus />
        </EditText>

    <Button android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/codigo"
        android:layout_toEndOf="@+id/codigo" />


        <EditText
            android:id="@+id/nomdisp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/nomb"
            android:layout_below="@+id/codigo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>


        <EditText
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/descrip_disp"
            android:layout_below="@+id/nomdisp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>

        <EditText
            android:id="@+id/latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="latitud"
            android:layout_below="@+id/descripcion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </EditText>



        TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/mensaje_id"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/latitud"
            android:layout_alignEnd="@+id/latitud" />

        <EditText
            android:id="@+id/longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="longitud"
            android:layout_below="@+id/latitud"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/tiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="tiempo"
            android:layout_below="@+id/longitud"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar"
            android:id="@+id/btagr"
            android:onClick="adddip"
            android:layout_below="@+id/tiempo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:onClick="canceldisp"
            android:id="@+id/button3"
            android:layout_alignBottom="@+id/btagr"
            android:layout_toRightOf="@+id/btagr"
            android:layout_toEndOf="@+id/btagr" />


    </RelativeLayout>

</LinearLayout>
